<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/menu_webSearch"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/NewsScreen" />
        <item
            android:id="@+id/menu_weather"
            android:icon="@drawable/ic_baseline_wb_sunny_24"
            android:title="@string/WeatherScreen" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/app_settings"/>
            <item
                android:id="@+id/menu_licenses"
                android:icon="@drawable/ic_baseline_local_police_24"
                android:title="@string/LicenseScreen" />
        </menu>
    </item>
</menu>