<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_webSearch"
        android:title="@string/NewsScreen"
        android:icon="@drawable/ic_baseline_menu_book_24"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_weather"
        android:title="@string/WeatherScreen"
        android:icon="@drawable/ic_baseline_wb_sunny_24"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/app_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom|withText" />
</menu>